--- a/web/002 水质情况实时监测预警系统/index.html
+++ b/web/002 水质情况实时监测预警系统/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="60;url='http://mtw.so/5FRdFE'">
+    <meta http-equiv="refresh" content="60;url='https://gitee.com/iGaoWei/big-data-view'">
     <title>水质监测</title>
     <link rel="stylesheet" href="css/index.css">
     <!--更多资源：https://gitee.com/iGaoWei/big-data-view -->
@@ -124,7 +124,7 @@
 </body>
 </html>
 
-<script src="https://www.jq22.com/jquery/echarts-4.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/4.3.0/echarts.min.js"></script>
 <script src="https://www.jq22.com/jquery/jquery-1.10.2.js"></script>
 <script type="text/javascript" src="js/china.js"></script>
 <script type="text/javascript" src="js/index.js"></script>
